# CodeWiki

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README.md  README_OLD.md  README_ZH.md  config.example.toml  pyproject.toml  requirements.txt  test_format.py  test_math.py  test_math2.py
codewiki/: __init__.py  __main__.py  run_web_app.py
codewiki/cli/: __init__.py  config_manager.py  git_manager.py  html_generator.py  main.py  static_generator.py
codewiki/cli/adapters/: __init__.py  doc_generator.py
codewiki/cli/commands/: build_static.py  config.py  generate.py
codewiki/cli/models/: __init__.py  config.py  job.py
codewiki/cli/utils/: __init__.py  api_errors.py  errors.py  fs.py  (+5 more)
codewiki/src/: __init__.py  codewiki_config.py  config.py  config_loader.py  logging_setup.py  utils.py
docker/: env.example
docs/: literature_survey_llm_code_wiki.md  v3.md
docs/plans/: 2026-02-28-compiled-lang-hls-design.md  2026-02-28-compiled-lang-hls-impl.md  2026-03-01-multi-doc-types-design.md  2026-03-01-multi-doc-types-impl.md  2026-03-04-async-client-pool.md  2026-03-04-audit-fix-plan.md  2026-03-04-perf-round2.md  2026-03-04-performance-optimizations.md  2026-03-04-ux-improvements.md  2026-03-05-index-layer-design.md  2026-03-05-index-layer-impl.md  2026-04-01-clustering-v2.md  2026-04-01-config-system-design.md  2026-04-01-config-system-impl.md  2026-04-01-generation-v2.md  2026-04-01-graph-layer-v1.md  2026-04-01-post-layer-v2.md  2026-04-02-naming-universe-unification.md  2026-04-03-documentation-generator-split-design.md  2026-04-03-documentation-generator-split.md  2026-04-03-observability-performance-design.md  2026-04-03-observability-performance-plan.md  2026-04-03-prompt-system-optimization.md  2026-04-03-ruff-ty-design.md  2026-04-03-ruff-ty.md  2026-04-03-security-correctness-design.md  2026-04-03-security-correctness-plan.md  2026-04-04-architecture-design.md  2026-04-04-architecture-plan.md  2026-04-04-daisyui-frontend-design.md  2026-04-04-daisyui-frontend-plan.md  2026-04-04-final-review-fixes-design.md  2026-04-04-final-review-fixes-plan.md  2026-04-04-postprocess-repair-design.md  2026-04-04-postprocess-repair-plan.md  2026-04-04-resilience-design.md  2026-04-04-resilience-plan.md
reviews/: 2026-03-05-index-layer-review.md  review-20260304-084119-372fdd.md  review-20260304-090413-bea8ef.md  review-20260304-093506-0228eb.md  review-20260304-113015-20edae.md  review-20260304-193211-0fbad3.md  review-20260305-014133-cbe4ed.md  review-20260305-041312-9779bb.md
tests/: test_agent_assigned_filename.py  test_agent_orchestrator_behavior.py  test_agent_tool_no_tree_mutation.py  test_analysis_service_behavior.py  test_async_routes.py  test_background_worker_config_loading.py  test_background_worker_helpers.py  test_bash_analyzer.py  test_batch_state_writes.py  test_be_main_behavior.py  test_be_main_config_loading.py  test_block_fixes.py  test_build_generation_tasks_namespace.py  test_build_overview_structure.py  test_build_static_command.py  test_c_analyzer_behavior.py  test_c_analyzer_enhanced.py  test_cache_manager.py  test_call_graph_analyzer_behavior.py  test_cancel_wiring.py  test_cancellation.py  test_cli_config_commands.py  test_cli_generate_command.py  test_cli_generate_config_file.py  test_cli_git_manager.py  test_cli_html_generator.py  test_cli_utils_fs.py  test_cli_utils_instructions.py  test_cli_utils_progress.py  test_cli_utils_repo_validator.py  test_cli_utils_validation.py  test_cloning_behavior.py  test_clustering_graph_builder.py  test_clustering_models.py  test_clustering_partitioner.py  test_clustering_pipeline.py  test_clustering_stability.py  test_cmake_additional.py  test_cmake_enhanced.py  test_codewiki_config.py  (+130 more)
(+128 files in other folders)
