[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codewiki"
version = "2.1.0"
description = "Transform codebases into comprehensive documentation using AI-powered analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "CodeWiki Contributors"}
]
keywords = ["documentation", "code-analysis", "ai", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.1.0",
    "keyring>=24.0.0",
    "GitPython>=3.1.40",
    "Jinja2>=3.1.6",
    "mdformat>=0.7.21",
    "tree-sitter>=0.23.2",
    "tree-sitter-bash>=0.25.1",
    "tree-sitter-cmake>=0.7.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-language-pack>=0.8.0",
    "tree-sitter-make>=1.1.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-toml>=0.7.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.21.4",
    "tree-sitter-typescript>=0.21.2",
    "tree-sitter-c>=0.21.4",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-php>=0.23.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
    "openai>=1.107.0",
    "litellm>=1.77.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydantic-ai>=1.0.6",
    "requests>=2.32.4",
    "structlog>=24.1.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "networkx>=3.5",
    "psutil>=7.0.0",
    "PyYAML>=6.0.2",
    "mermaid-parser-py>=0.0.2",
    "mermaid-py>=0.8.0",
    "markdown-it-py>=3.0.0",
    "nh3>=0.2.15",
    "json_repair>=0.30.0",
    "tomli_w>=1.0.0",
]

[external]
# Node.js is required for mermaid-py which validates mermaid diagrams in generated documentation
build-requires = [
    { name = "nodejs", version = ">=14.0.0" }
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
    "ty>=0.0.27",
    "ipython>=8.0.0",
]

[project.scripts]
codewiki = "codewiki.cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/codewiki"
Documentation = "https://github.com/yourusername/codewiki/docs"
Repository = "https://github.com/yourusername/codewiki"
Issues = "https://github.com/yourusername/codewiki/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["codewiki*"]

[tool.setuptools.package-data]
codewiki = ["templates/**/*", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".codewiki",
    "codewiki-docs",
    "output",
]

[tool.ruff.lint]
select = ["E9", "F811", "F821", "F822", "F823"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
all = "warn"

[tool.ty.src]
include = ["codewiki"]
exclude = [
    "codewiki/templates",
]

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
all = "warn"

[tool.ty.terminal]
output-format = "concise"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v -p no:cov -s"
asyncio_mode = "strict"
